--- a/source/main-page.html
+++ b/source/main-page.html
@@ -732,7 +732,7 @@
             </a>
           </li>
         </ul>
-        <a href="#" class="public-debate__button button button--light-blue">
+        <a href="#" class="direct-line-section__button button button--light-blue">
           <span>Перейти ко всем ПРЯМЫМ линиям</span>
           <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
             <use xlink:href="img/sprite.svg#icon-arrow"></use>
