--- a/source/hearings-4.html
+++ b/source/hearings-4.html
@@ -61,7 +61,7 @@
             </p>
           </div>
         </div>
-        <div class="hearings__result hearings-result">
+        <div class="hearings__result hearings-result js-hearings-parent">
           <div class="hearings-result__files">
             <h2 class="subtitle subtitle--large">Итоги проведения общественных
               обсуждений</h2>
