Fixes for direct-line

--- a/source/index.html
+++ b/source/index.html
@@ -300,6 +300,9 @@
         <li>
           <a href="direct-line.html" target="_blank">Прямая линия с Василием Голубевым</a>
         </li>
+        <li>
+          <a href="direct-line-result.html" target="_blank">Прямая линия с Василием Голубевым - результаты</a>
+        </li>
       </ul>
     </div>
   </main>
