--- a/source/direct-line-result.html
+++ b/source/direct-line-result.html
@@ -8,16 +8,13 @@
   <include src="source/components/header.html"></include>
 
   <main class="project-page page-content page-content--with-back-btn">
-    <div class="container">
-      <include src="source/components/back-btn.html"></include>
-    </div>
 
     <div class="container container--desktop-only">
       <article class="content">
         <h1>Прямая линия с Василием Голубевым</h1>
 
         <div class="page-status">
-          <p>Статус:<a href="#" class="status-color--green">Подведены итоги</a></p>
+          <p>Статус:<span class="status-color--green">Подведены итоги</span></p>
         </div>
 
         <div class="project-page__container js-hearings-parent" data-sticky-container>
