Modifying iles input and selects.

--- a/source/direct-line-result.html
+++ b/source/direct-line-result.html
@@ -574,7 +574,7 @@
                                          Рыбным текстом называется текст, служащий для временного наполнения макета.</p>
 
             <div class="form-select">
-              <select id="widget-select-project-category">
+              <select id="widget-select-project-category" class="js-select-level">
                 <option data-placeholder="true" value="Тип виджета">Выберите категорию вопроса</option>
                 <option value="Обсуждения">Сбор бытовых отходов</option>
                 <option value="Опросы">Опросы</option>
@@ -611,7 +611,7 @@
                     <span>заявление ШПС1 Фащевка - Городище.docx</span>
                   </div>
                 </div>
-                <input class="visually-hidden" type="file" name="user-files" id="user-files"
+                <input class="visually-hidden js-user-files" type="file" name="user-files" id="user-files"
                        accept=".doc,.docx,application/msword,.txt,.rtf,.xls,.xlsx,.pps,.ppt,.pptx,.pdf,.jpg,.jpeg,.bmp,.png,.tif,.gif,.pcx,.mp3,.wma,.mkv,.wmv,.mov,.flv,.pub">
                 <label for="user-files" data-max-files="10"><span>Загрузить файл</span></label>
               </div>
