--- a/source/direct-line.html
+++ b/source/direct-line.html
@@ -333,20 +333,21 @@
                                          Рыбным текстом называется текст, служащий для временного наполнения макета.</p>
 
             <div class="form-select">
-              <select id="widget-select-project-category">
+              <select id="widget-select-project-category" class="js-select-level">
                 <option data-placeholder="true" value="Тип виджета">Выберите категорию вопроса</option>
                 <option value="Обсуждения">Сбор бытовых отходов</option>
                 <option value="Опросы">Опросы</option>
                 <option value="Новости">Новости</option>
                 <option value="Проекты">Проекты</option>
               </select>
+              <span class="input-error">Пожалуйста выберите одну из категорий</span>
             </div>
             <div class="description-block">
               <div class="description-block__textarea-container">
                 <textarea name="proposition" id="proposition description-block__proposition-name" rows="1" placeholder="Адрес проблемы"
                           class="description-block__textarea"
                           aria-label="Адрес проблемы"></textarea>
-                <span class="description-block__textarea-error">Вы превысили
+                <span class="input-error">Вы превысили
                   лимит на хх символов</span>
               </div>
             </div>
@@ -355,7 +356,7 @@
                 <textarea name="proposition" id="proposition1" rows="3" placeholder="Вопрос губернатору"
                           class="description-block__textarea description-block__textarea--medium"
                           aria-label="Вопрос губернатору"></textarea>
-                <span class="description-block__textarea-error">Вы превысили
+                <span class="input-error">Вы превысили
                   лимит на хх символов</span>
               </div>
             </div>
@@ -370,9 +371,10 @@
                     <span>заявление ШПС1 Фащевка - Городище.docx</span>
                   </div>
                 </div>
-                <input class="visually-hidden" type="file" name="user-files" id="user-files"
+                <input class="visually-hidden js-user-files" type="file" name="user-files" id="user-files"
                        accept=".doc,.docx,application/msword,.txt,.rtf,.xls,.xlsx,.pps,.ppt,.pptx,.pdf,.jpg,.jpeg,.bmp,.png,.tif,.gif,.pcx,.mp3,.wma,.mkv,.wmv,.mov,.flv,.pub">
                 <label for="user-files" data-max-files="10"><span>Загрузить файл</span></label>
+                <span class="input-error">Пожалуйста загрузите файл</span>
               </div>
             </div>
 
