--- a/source/proposal-warning.html
+++ b/source/proposal-warning.html
@@ -132,6 +132,8 @@
                     accept="image/png, image/jpeg, image/jpg, image/gif" aria-label="user-images">
                   <span>Загрузить изображение</span>
                 </div>
+                <span class="error-field">Пожалуйста загрузите изображение</span>
+                <span class="error-field error-field--size visually-hidden">Изображение не должно превышать 10Мб</span>
               </div>
             </div>
             <div class="landscaping-form__section map-section">
