--- a/source/widget-for-third-party-resource.html
+++ b/source/widget-for-third-party-resource.html
@@ -202,6 +202,6 @@
     <include src="source/components/up-btn.html"></include>
 
     <script src="js/libs.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
