Collection of comnmits

--- a/source/direct-line-result.html
+++ b/source/direct-line-result.html
@@ -287,6 +287,8 @@
             </form>
           </div>
 
+          <hr class="separator"></hr>
+
           <div class="project-page__text">
             <p>
               Губернатор Ростовской области в&nbsp;прямом эфире ответит на&nbsp;вопросы, волнующие жителей Дона.
@@ -745,7 +747,7 @@
   </template>
 
   <script src="js/libs.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
 
 </html>
