--- a/source/project-form-2-1.html
+++ b/source/project-form-2-1.html
@@ -208,12 +208,12 @@
               </div>
               <div class="image-uploads__image-wrapper">
                 <input class="visually-hidden" type="file" name="user-images"
-                  accept="image/png, image/jpeg, image/jpg, image/gif" aria-label="user-images">
+                  accept=".png, .jpeg, .jpg, .gif" aria-label="user-images">
                 <span>Загрузить изображение</span>
               </div>
-              <span class="error-field">Пожалуйста загрузите изображение</span>
-              <span class="error-field error-field--size visually-hidden">Изображение не должно превышать 10Мб</span>
             </div>
+            <span class="error-field">Пожалуйста загрузите изображение</span>
+            <span class="error-field error-field--size visually-hidden">Изображение не должно превышать 10Мб</span>
           </div>
           <include src="source/components/buttons-wrapper.html"></include>
           <div class="confirmation-popup" data-modal="remove">
