--- a/source/proposal-internet.html
+++ b/source/proposal-internet.html
@@ -79,6 +79,7 @@
           <div class="internet-vote__table-wrapper">
             <div class="internet-vote__table-container">
               <h3 class="internet-vote__table-title">Рейтинг населенных пунктов вашего региона</h3>
+              <p class="internet-vote__text"><sup>*</sup>&mdash; населенные пункты, попадающие в&nbsp;список подключения по&nbsp;региону. В&nbsp;них будет проведет интернет при соблюдении условий голосования.</p>
               <table class="internet-vote__table">
                 <thead>
                   <tr>
@@ -88,7 +89,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>Заринский, с. Авдеевская база</td>
+                    <td>Заринский, с. Авдеевская база<sup>*</sup></td>
                     <td>640</td>
                   </tr>
                   <tr>
@@ -96,7 +97,7 @@
                     <td>500</td>
                   </tr>
                   <tr>
-                    <td>Завьяловский, с. Александровка</td>
+                    <td>Завьяловский, с. Александровка<sup>*</sup></td>
                     <td>400</td>
                   </tr>
                   <tr>
@@ -104,11 +105,15 @@
                     <td>370</td>
                   </tr>
                   <tr>
-                    <td>Город славгород городской округ, с. Архангельское</td>
+                    <td>Город славгород городской округ, с. Архангельское<sup>*</sup></td>
                     <td>350</td>
                   </tr>
                 </tbody>
               </table>
+              <div class="internet-vote__buttons-wrapper">
+                <button class="button button--blue" type="submit">Показать еще</button>
+              </div>
+
             </div>
           </div>
 
