--- a/source/main-page.html
+++ b/source/main-page.html
@@ -668,14 +668,20 @@
               <use xlink:href="img/sprite.svg#icon-radio"></use>
             </svg>
             <h2 class="direct-line-section__title section__title">Прямые линии</h2>
+            <a href="#" class="public-debate__archive-link link-arrow link link--grey">
+              <span>Архив прямых линий</span>
+              <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <use xlink:href="img/sprite.svg#icon-arrow"></use>
+              </svg>
+            </a>
           </div>
-          <a href="#" class="public-debate__archive-link link-arrow link link--grey">
-            <span>Архив прямых линий</span>
-            <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="img/sprite.svg#icon-arrow"></use>
-            </svg>
-          </a>
         </div>
+        <p class="description">
+          Общественные обсуждения и публичные слушания - это возможность для
+          граждан узнать о начале общественных обсуждений /
+          публичных&nbsp;слушаний и оставить свое мнение по вопросам,
+          выносящимся на обсуждение.
+        </p>
         <ul class="direct-line-section__projects concurrent-projects">
           <li class="concurrent-projects__item">
             <a href="#" class="concurrent-projects__link">
@@ -734,6 +740,12 @@
         </ul>
         <a href="#" class="direct-line-section__button button button--light-blue">
           <span>Перейти ко всем ПРЯМЫМ линиям</span>
+          <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <use xlink:href="img/sprite.svg#icon-arrow"></use>
+          </svg>
+        </a>
+        <a href="#" class="public-debate__archive-link-mobile link-arrow link link--grey">
+          <span>Архив прямых линий</span>
           <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
             <use xlink:href="img/sprite.svg#icon-arrow"></use>
           </svg>
