Fix for page-status color

--- a/source/direct-line.html
+++ b/source/direct-line.html
@@ -14,7 +14,7 @@
         <h1>Прямая линия с Василием Голубевым</h1>
 
         <div class="page-status">
-          <p class="page-status__title">Статус:<span class="status-color--blue">Идёт приём вопросов</span></p>
+          <p class="page-status__title">Статус:<span class="status-color--grey">Идёт приём вопросов</span></p>
         </div>
 
         <div class="project-page__container js-hearings-parent" data-sticky-container>
