Добавляет страницу Благоустройство -разводящая 5 с альтернативой лайка - чекбокс, чекбокс в ui-kit, отметку дизайн проекта перед адресом

--- a/source/index.html
+++ b/source/index.html
@@ -162,6 +162,10 @@
           <a href="improvement-fork-4.html" target="_blank">Благоустройство
             разводящая 4</a>
         </li>
+        <li>
+          <a href="improvement-list-var2.html" target="_blank">Благоустройство
+            разводящая 5</a>
+        </li>
         <br />
         <li>
           <a href="project-budgets.html" target="_blank">Параллельные
