--- a/source/ui-kit.html
+++ b/source/ui-kit.html
@@ -106,6 +106,15 @@
         <input type="radio" name="radio" id="radio-3" value="radio-3" disabled>
         <label for="radio-3">Я радиобаттон</label>
       </div>
+      <div class="form-checkbox form-checkbox--round">
+        <input type="checkbox" name="checkbox" id="checkbox-3" value="checkbox-3">
+        <label for="checkbox-3">Я чекбокс</label>
+      </div>
+      <div class="form-checkbox form-checkbox--round">
+        <input type="checkbox" name="checkbox-2" id="checkbox-4"
+          value="checkbox-4" disabled>
+        <label for="checkbox-4">Я чекбокс</label>
+      </div>
       <div class="form-select js-form-select">
         <select name="projects-select" id="projects-select">
           <option value="Библиотеки" title="Библиотеки">Библиотеки</option>
