Добавляет страницу Форма создания предложения 6-7 с вариантом галереи внутри проекта с кнопкой для голосования вместо лайка

--- a/source/index.html
+++ b/source/index.html
@@ -142,6 +142,10 @@
             предложения 6-7</a>
         </li>
         <li>
+          <a href="proposal-page-voting-var2.html" target="_blank">Форма создания
+            предложения 6-7 - c альтернативой лайка и другого вида гелереей</a>
+        </li>
+        <li>
           <a href="proposal-page-implemented.html" target="_blank">Форма
             создания предложения 8</a>
         </li>
@@ -164,7 +168,7 @@
         </li>
         <li>
           <a href="improvement-list-var2.html" target="_blank">Благоустройство
-            разводящая 5</a>
+            разводящая 5 - с альтернативой лайка и отметкой дизайн-проекта</a>
         </li>
         <br />
         <li>
