Добавляет страницу после голосования, дополняет проекты, добавляет галерею, аккордеон

--- a/source/index.html
+++ b/source/index.html
@@ -143,7 +143,11 @@
         </li>
         <li>
           <a href="proposal-page-voting-var2.html" target="_blank">Форма создания
-            предложения 6-7 - c альтернативой лайка и другого вида гелереей</a>
+            предложения 6-7 - c альтернативой лайка - синей кнопкой до того как проголосовали и другого вида гелереей</a>
+        </li>
+        <li>
+          <a href="proposal-page-voting-var3.html" target="_blank">Форма создания
+            предложения 6-7 - c альтернативой лайка - после того как проголосовали</a>
         </li>
         <li>
           <a href="proposal-page-implemented.html" target="_blank">Форма
@@ -168,7 +172,7 @@
         </li>
         <li>
           <a href="improvement-list-var2.html" target="_blank">Благоустройство
-            разводящая 5 - с альтернативой лайка и отметкой дизайн-проекта</a>
+            разводящая 5 - с альтернативой лайка - чекбоксом и отметкой дизайн-проекта</a>
         </li>
         <br />
         <li>
