Вносит измнения, добавляет страницу с вкладками-табами Дизайн-проекты, Вехи реализации

--- a/source/index.html
+++ b/source/index.html
@@ -150,6 +150,10 @@
             предложения 6-7 - c альтернативой лайка - после того как проголосовали</a>
         </li>
         <li>
+          <a href="proposal-page-voting-var4.html" target="_blank">Форма создания
+            предложения 6-7 - открыта вкладка Вехи реализации</a>
+        </li>
+        <li>
           <a href="proposal-page-implemented.html" target="_blank">Форма
             создания предложения 8</a>
         </li>
@@ -173,6 +177,10 @@
         <li>
           <a href="improvement-list-var2.html" target="_blank">Благоустройство
             разводящая 5 - с альтернативой лайка - чекбоксом и отметкой дизайн-проекта</a>
+        </li>
+        <li>
+          <a href="improvement-list-var3.html" target="_blank">Благоустройство
+            разводящая 5 - с лайком и альтернативой лайка - чекбоксом</a>
         </li>
         <br />
         <li>
