--- a/source/proposal-page-voting-var2.html
+++ b/source/proposal-page-voting-var2.html
@@ -29,9 +29,16 @@
               <span class="project-vote__expire-value">56 дней</span>&nbsp;до завершения
             </p>
             <div class="project-vote__like-counter js-like-counter">
-              <span>Всего проголосовало: 504</span>
+              <span>Всего проголосовало: 504</spans=>
               <p>Выберите вариант дизайн-проекта для&nbsp;благоустройства территорий</p>
               <button type="button" class="button button--blue">ПРОГОЛОСОВАТЬ</button>
+              <div class="project-vote__like-wrapper">
+                <div class="form-checkbox form-checkbox--round form-checkbox--white">
+                  <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
+                  <label for="checkbox-2"></label>
+                </div>
+                <span>Ваш голос учтён</span>
+              </div>
             </div>
           </div>
         </div>
@@ -72,10 +79,10 @@
                 </a>
               </div>
               <div class="swiper-slide swiper-slide-next" style="margin-right: 16px;">
-                <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@x.png" target="_blank"
+                <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                   aria-label="описание картинки" data-index="1">
                   <figure class="gallery__item">
-                    <img width="135" height="135" class="gallery__item-img" src="img/img-project/project-img-2@x.png"
+                    <img width="135" height="135" class="gallery__item-img" src="img/img-project/project-img-2@2x.png"
                       alt="описание картинки">
                     <figcaption class="gallery__item-text">
                       Самый известный текст-«рыба», называемый Lorem ipsum,
@@ -228,10 +235,10 @@
                   </a>
                 </div>
                 <div class="swiper-slide swiper-slide-next" style="margin-right: 16px;">
-                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@x.png" target="_blank"
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                     aria-label="описание картинки" data-index="1">
                     <figure class="gallery__item">
-                      <img width="129" height="129" class="gallery__item-img" src="img/img-project/project-img-2@x.png"
+                      <img width="129" height="129" class="gallery__item-img" src="img/img-project/project-img-2@2x.png"
                         alt="описание картинки">
                       <figcaption class="gallery__item-text">
                         Самый известный текст-«рыба», называемый Lorem ipsum,
@@ -313,6 +320,13 @@
                 </div>
               </div>
               <button type="button" class="button button--blue">ПРОГОЛОСОВАТЬ</button>
+              <div class="proposal-list__like-counter js-like-counter">
+                <div class="form-checkbox form-checkbox--round form-checkbox--white">
+                  <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
+                  <label for="checkbox-2"></label>
+                </div>
+                <span>Вы выбрали данный дизайн-проект</span>
+              </div>
               <button class="proposal__project-details button-details">
                 <span class="button-details__text">Подробнее</span>
                 <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -375,10 +389,10 @@
                   </a>
                 </div>
                 <div class="swiper-slide swiper-slide-next" style="margin-right: 16px;">
-                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@x.png" target="_blank"
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                     aria-label="описание картинки" data-index="1">
                     <figure class="gallery__item">
-                      <img width="135" height="135" class="gallery__item-img" src="img/img-project/project-img-2@x.png"
+                      <img width="135" height="135" class="gallery__item-img" src="img/img-project/project-img-2@2x.png"
                         alt="описание картинки">
                       <figcaption class="gallery__item-text">
                         Самый известный текст-«рыба», называемый Lorem ipsum,
@@ -461,6 +475,13 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
               <button type="button" class="button button--blue">ПРОГОЛОСОВАТЬ</button>
+              <div class="proposal-list__like-counter js-like-counter">
+                <div class="form-checkbox form-checkbox--round form-checkbox--white">
+                  <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
+                  <label for="checkbox-2"></label>
+                </div>
+                <span>Вы выбрали данный дизайн-проект</span>
+              </div>
             <button class="proposal__project-details button-details">
               <span class="button-details__text">Подробнее</span>
               <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -522,10 +543,10 @@
                   </a>
                 </div>
                 <div class="swiper-slide swiper-slide-next" style="margin-right: 16px;">
-                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@x.png" target="_blank"
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                     aria-label="описание картинки" data-index="1">
                     <figure class="gallery__item">
-                      <img width="129" height="129" class="gallery__item-img" src="img/img-project/project-img-2@x.png"
+                      <img width="129" height="129" class="gallery__item-img" src="img/img-project/project-img-2@2x.png"
                         alt="описание картинки">
                       <figcaption class="gallery__item-text">
                         Самый известный текст-«рыба», называемый Lorem ipsum,
@@ -608,6 +629,13 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
               <button type="button" class="button button--blue">ПРОГОЛОСОВАТЬ</button>
+              <div class="proposal-list__like-counter js-like-counter">
+                <div class="form-checkbox form-checkbox--round form-checkbox--white">
+                  <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
+                  <label for="checkbox-2"></label>
+                </div>
+                <span>Вы выбрали данный дизайн-проект</span>
+              </div>
                 <button class="proposal__project-details button-details">
                   <span class="button-details__text">Подробнее</span>
                     <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
