--- a/source/proposal-page-voting-var3.html
+++ b/source/proposal-page-voting-var3.html
@@ -29,14 +29,14 @@
               <span class="project-vote__expire-value">56 дней</span>&nbsp;до завершения
             </p>
             <div class="project-vote__like-counter js-like-counter">
-              <span>Всего проголосовало: 504</span>
+              <span>Всего проголосовало: 504</spanss=>
               <p>Выберите вариант дизайн-проекта для&nbsp;благоустройства территорий</p>
-              <div class="proposal-list__like-counter js-like-counter">
-                <div class="form-checkbox form-checkbox--round">
+              <div class="project-vote__like-counter">
+                <div class="form-checkbox form-checkbox--round form-checkbox--white">
                   <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
                   <label for="checkbox-2"></label>
                 </div>
-                <span>Ваш голос учтён</span>
+                <span class="project-vote__rezult">Ваш голос учтён</span>
               </div>
             </div>
           </div>
@@ -78,10 +78,10 @@
                 </a>
               </div>
               <div class="swiper-slide swiper-slide-next" style="margin-right: 16px;">
-                <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@x.png" target="_blank"
+                <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                   aria-label="описание картинки" data-index="1">
                   <figure class="gallery__item">
-                    <img width="135" height="135" class="gallery__item-img" src="img/img-project/project-img-2@x.png"
+                    <img width="135" height="135" class="gallery__item-img" src="img/img-project/project-img-2@2x.png"
                       alt="описание картинки">
                     <figcaption class="gallery__item-text">
                       Самый известный текст-«рыба», называемый Lorem ipsum,
@@ -234,10 +234,10 @@
                   </a>
                 </div>
                 <div class="swiper-slide swiper-slide-next" style="margin-right: 16px;">
-                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@x.png" target="_blank"
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                     aria-label="описание картинки" data-index="1">
                     <figure class="gallery__item">
-                      <img width="129" height="129" class="gallery__item-img" src="img/img-project/project-img-2@x.png"
+                      <img width="129" height="129" class="gallery__item-img" src="img/img-project/project-img-2@2x.png"
                         alt="описание картинки">
                       <figcaption class="gallery__item-text">
                         Самый известный текст-«рыба», называемый Lorem ipsum,
@@ -381,10 +381,10 @@
                   </a>
                 </div>
                 <div class="swiper-slide swiper-slide-next" style="margin-right: 16px;">
-                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@x.png" target="_blank"
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                     aria-label="описание картинки" data-index="1">
                     <figure class="gallery__item">
-                      <img width="135" height="135" class="gallery__item-img" src="img/img-project/project-img-2@x.png"
+                      <img width="135" height="135" class="gallery__item-img" src="img/img-project/project-img-2@2x.png"
                         alt="описание картинки">
                       <figcaption class="gallery__item-text">
                         Самый известный текст-«рыба», называемый Lorem ipsum,
@@ -467,7 +467,7 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
               <div class="proposal-list__like-counter js-like-counter">
-                <div class="form-checkbox form-checkbox--round">
+                <div class="form-checkbox form-checkbox--round form-checkbox--white">
                   <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
                   <label for="checkbox-2"></label>
                 </div>
@@ -534,10 +534,10 @@
                   </a>
                 </div>
                 <div class="swiper-slide swiper-slide-next" style="margin-right: 16px;">
-                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@x.png" target="_blank"
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                     aria-label="описание картинки" data-index="1">
                     <figure class="gallery__item">
-                      <img width="129" height="129" class="gallery__item-img" src="img/img-project/project-img-2@x.png"
+                      <img width="129" height="129" class="gallery__item-img" src="img/img-project/project-img-2@2x.png"
                         alt="описание картинки">
                       <figcaption class="gallery__item-text">
                         Самый известный текст-«рыба», называемый Lorem ipsum,
