--- a/source/proposal-page-voting-var2.html
+++ b/source/proposal-page-voting-var2.html
@@ -336,7 +336,7 @@
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
             </div>
           </div>
-          <div class="proposal__project proposal__project--open">
+          <div class="proposal__project">
             <div class="proposal__project-wrapper">
               <div class="form-radio">
                 <input type="radio" name="radio" id="radio-2" value="radio-2" checked>
@@ -490,7 +490,7 @@
             </button>
             </div>
           </div>
-          <div class="proposal__project proposal__project--close">
+          <div class="proposal__project">
             <div class="proposal__project-wrapper">
               <div class="form-radio">
                 <input type="radio" name="radio" id="radio-3" value="radio-3">
